UI changes update
ui change

--- a/project.html
+++ b/project.html
@@ -286,7 +286,7 @@
       <!-- UX Design -->
       <div id="ux" class="tab-section">
         <div class="row">
-          <div class="col-md-4 col-sm-6 col-xs-12">
+          <!-- <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="tab-content">
               <iframe src="https://www.behance.net/embed/project/222563209?ilo0=1" height="320" width="100%"
                 allowfullscreen lazyload frameborder="0" allow="clipboard-write"
@@ -296,7 +296,7 @@
 
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="tab-content">
-              <iframe src="https://www.behance.net/embed/project/222563209?ilo0=1" height="320" width="100%"
+              <iframe src="https://www.behance.net/embed/project/218778945?ilo0=1" height="320" width="100%"
                 allowfullscreen lazyload frameborder="0" allow="clipboard-write"
                 refererPolicy="strict-origin-when-cross-origin"></iframe>
             </div>
@@ -309,7 +309,7 @@
                 allowfullscreen lazyload frameborder="0" allow="clipboard-write"
                 refererPolicy="strict-origin-when-cross-origin"></iframe>
             </div>
-          </div>
+          </div> -->
 
 
           <div class="col-md-4 col-sm-6 col-xs-12">
@@ -324,6 +324,31 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="tab-content">
               <iframe src="https://www.behance.net/embed/project/179250001?ilo0=1" height="320" width="100%"
+                allowfullscreen lazyload frameborder="0" allow="clipboard-write"
+                refererPolicy="strict-origin-when-cross-origin"></iframe>
+            </div>
+          </div>
+
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <iframe src="https://www.behance.net/embed/project/163851641?ilo0=1" height="320" width="100%"
+                allowfullscreen lazyload frameborder="0" allow="clipboard-write"
+                refererPolicy="strict-origin-when-cross-origin"></iframe>
+            </div>
+          </div>
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <iframe src="https://www.behance.net/embed/project/163851289?ilo0=1" height="320" width="100%"
+                allowfullscreen lazyload frameborder="0" allow="clipboard-write"
+                refererPolicy="strict-origin-when-cross-origin"></iframe>
+            </div>
+          </div>
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <iframe src="https://www.behance.net/embed/project/163852021?ilo0=1" height="320" width="100%"
                 allowfullscreen lazyload frameborder="0" allow="clipboard-write"
                 refererPolicy="strict-origin-when-cross-origin"></iframe>
             </div>
@@ -395,19 +420,13 @@
               <img src="/images/illu/11.jpg" alt="Digital Illustrations" srcset="">
             </div>
           </div>
-        
+
         </div>
       </div>
 
       <!-- Logo Design -->
       <div id="logo" class="tab-section">
         <div class="row">
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <div class="tab-content">
-              <img src="images/logo/1.jpg" alt="Digital Illustrations" srcset="">
-            </div>
-          </div>
-
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="tab-content">
               <img src="images/logo/1.jpg" alt="Digital Illustrations" srcset="">
