3d modal image update
3d modal image update

--- a/project.html
+++ b/project.html
@@ -518,6 +518,97 @@
               <img src="/images/digital/12.jpg" alt="Digital Illustrations" srcset="">
             </div>
           </div>
+
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <img src="/images/3d-modular-buildings/1.png" alt="Digital Illustrations" srcset="">
+            </div>
+          </div>
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <img src="/images/3d-modular-buildings/2.png" alt="Digital Illustrations" srcset="">
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <img src="/images/3d-modular-buildings/3.png" alt="Digital Illustrations" srcset="">
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <img src="/images/3d-modular-buildings/4.png" alt="Digital Illustrations" srcset="">
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <img src="/images/3d-modular-buildings/5.png" alt="Digital Illustrations" srcset="">
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <img src="/images/3d-modular-buildings/6.jpg" alt="Digital Illustrations" srcset="">
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <img src="/images/3d-modular-buildings/7.png" alt="Digital Illustrations" srcset="">
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <img src="/images/3d-modular-buildings/8.jpg" alt="Digital Illustrations" srcset="">
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <img src="/images/3d-modular-buildings/9.png" alt="Digital Illustrations" srcset="">
+            </div>
+          </div>
+
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <img src="/images/3d-modular-buildings/10.png" alt="Digital Illustrations" srcset="">
+            </div>
+          </div>
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <img src="/images/3d-modular-buildings/11.jpg" alt="Digital Illustrations" srcset="">
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <img src="/images/3d-modular-buildings/12.png" alt="Digital Illustrations" srcset="">
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <img src="/images/3d-modular-buildings/13.png" alt="Digital Illustrations" srcset="">
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <img src="/images/3d-modular-buildings/14.png" alt="Digital Illustrations" srcset="">
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <img src="/images/3d-modular-buildings/15.png" alt="Digital Illustrations" srcset="">
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <img src="/images/3d-modular-buildings/16.png" alt="Digital Illustrations" srcset="">
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <img src="/images/3d-modular-buildings/17.png" alt="Digital Illustrations" srcset="">
+            </div>
+          </div>                 
         </div>
       </div>
 
