--- a/project.html
+++ b/project.html
@@ -286,30 +286,6 @@
       <!-- UX Design -->
       <div id="ux" class="tab-section">
         <div class="row">
-          <!-- <div class="col-md-4 col-sm-6 col-xs-12">
-            <div class="tab-content">
-              <iframe src="https://www.behance.net/embed/project/222563209?ilo0=1" height="320" width="100%"
-                allowfullscreen lazyload frameborder="0" allow="clipboard-write"
-                refererPolicy="strict-origin-when-cross-origin"></iframe>
-            </div>
-          </div>
-
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <div class="tab-content">
-              <iframe src="https://www.behance.net/embed/project/218778945?ilo0=1" height="320" width="100%"
-                allowfullscreen lazyload frameborder="0" allow="clipboard-write"
-                refererPolicy="strict-origin-when-cross-origin"></iframe>
-            </div>
-          </div>
-
-
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <div class="tab-content">
-              <iframe src="https://www.behance.net/embed/project/217852105?ilo0=1" height="320" width="100%"
-                allowfullscreen lazyload frameborder="0" allow="clipboard-write"
-                refererPolicy="strict-origin-when-cross-origin"></iframe>
-            </div>
-          </div> -->
 
 
           <div class="col-md-4 col-sm-6 col-xs-12">
@@ -353,6 +329,29 @@
                 refererPolicy="strict-origin-when-cross-origin"></iframe>
             </div>
           </div>
+
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <img src="/images/user-experience-design/1.jpg" style="object-fit: scale-down;"
+                alt="Digital Illustrations" srcset="">
+            </div>
+          </div>
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <img src="/images/user-experience-design/2.png" style="object-fit: scale-down;"
+                alt="Digital Illustrations" srcset="">
+            </div>
+          </div>
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="tab-content">
+              <img src="/images/user-experience-design/3.jpg" style="object-fit: scale-down;"
+                alt="Digital Illustrations" srcset="">
+            </div>
+          </div>
+
 
 
 
@@ -608,7 +607,7 @@
             <div class="tab-content">
               <img src="/images/3d-modular-buildings/17.png" alt="Digital Illustrations" srcset="">
             </div>
-          </div>                 
+          </div>
         </div>
       </div>
 
