--- a/project.html
+++ b/project.html
@@ -577,7 +577,7 @@
             </div>
           </a>
 
-          <a class="col-md-4 col-sm-6 col-xs-12"  href="/images/3d-modular-buildings/11.png">
+          <a class="col-md-4 col-sm-6 col-xs-12"  href="/images/3d-modular-buildings/11.jpg">
             <div class="tab-content">
               <img src="/images/3d-modular-buildings/11.jpg" alt="Digital Illustrations" srcset="">
             </div>
