--- a/project.html
+++ b/project.html
@@ -148,7 +148,7 @@
             <button onclick="showTab('illustration')" id="btn-illustration">Digital Illustrations</button>
             <button onclick="showTab('logo')" id="btn-logo">Logo Designs</button>
             <button onclick="showTab('modelling')" id="btn-modelling">3D Modelling</button>
-            <button onclick="showTab('wedding')" id="btn-wedding">Wedding Animation</button>
+            <button onclick="showTab('wedding')" id="btn-wedding">All events invite videos</button>
           </div>
 
         </div>
