--- a/project.html
+++ b/project.html
@@ -835,6 +835,13 @@
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
+          <div class="col-lg-4 col-md-6">
+            <iframe width="100%" height="315" src="https://youtube.com/shorts/sNgwO7etfVM?si=eOat_xg1LMqwZQkD"
+              title="YouTube video player" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </div>
+
         </div>
 
       </div>
