youtube video link updated
youtube video link updated

--- a/project.html
+++ b/project.html
@@ -836,14 +836,13 @@
               referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
           <div class="col-lg-4 col-md-6">
-            <iframe width="100%" height="315" src="https://youtube.com/shorts/sNgwO7etfVM?si=eOat_xg1LMqwZQkD"
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/sNgwO7etfVM"
               title="YouTube video player" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+            </iframe>
           </div>
-
         </div>
-
       </div>
 
 
