--- a/project.html
+++ b/project.html
@@ -833,8 +833,10 @@
             <iframe width="100%" height="315" src="https://www.youtube.com/embed/Enm6CnRRoXc?si=bAh2Gi8xyPrcpKeb"
               title="YouTube video player" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+            </iframe>
           </div>
+
           <div class="col-lg-4 col-md-6">
             <iframe width="100%" height="315" src="https://www.youtube.com/embed/sNgwO7etfVM"
               title="YouTube video player" frameborder="0"
@@ -842,6 +844,17 @@
               referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
             </iframe>
           </div>
+
+          <div class="col-lg-4 col-md-6">
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/nyJ495Lfw9Y?si=7DFC8Gs1I5PfKa4B"
+              title="YouTube video player" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+            </iframe>
+          </div>
+
+
+
         </div>
       </div>
 
